# sqli

./: .gitignore  MANIFEST.in  README.md  output.out  requirements.txt  setup.cfg  setup.py  sqli_ex.docx
sqli/: sqli.py
