[metadata]
name = sqli
author = Aviel Yosef
author-email = Avielyo10@gmail.com
description-file = README.md
home-page = https://github.com/Avielyo10/sqli
license = Apache License Version 2.0
classifier =
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    sqli

[entry_points]
console_scripts =
    sqli = sqli.sqli:entry_point
